--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
 * {
     padding: 0;
     margin: 0;
@@ -25,28 +26,41 @@ main {
 }
 
 body {
-    background-color: rgb(41, 41, 41);
+    background-color: rgb(73, 73, 73);
 }
 
-header {
+nav {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 32px;
+    width: 100%;
+    height: 80px;
+    flex-direction: row;
+    max-width: 1300px;
+}
+
+.navContainer {
     display: flex;
     justify-content: center;
     align-items: center;
-    gap: 32px;
-    background-color: #1b078f;
     flex-direction: row;
+    width: 100%;
+    background-color: rgba(0, 0, 0, 0.3);
+    
 }
 
 .title {
-    color: rgb(0, 183, 255);
-    font-size: 32px;
-    font-weight: 700;
-    text-decoration: underline;
+    display: flex;
+    color: rgb(255, 255, 255);
+    font-size: 18px;
+    font-family: 'Montserrat', sans-serif;
+    padding-right: 35px;
 }
 
 .title:hover {
     cursor: pointer;
-    color: yellow;
+    color: rgb(0, 255, 255);
 }
 
 .profilePic {
@@ -55,6 +69,11 @@ header {
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
     margin: 10px;
     animation: scale-up 1000ms ease-in-out;
+}
+
+.navHeadings {
+    display: flex;
+    flex-direction: row;
 }
 
 #testLink {
